[gd_scene load_steps=13 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scenes/objects/actors/player/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://kdllovxoq1qf" path="res://scenes/components/player_weapons/weapon_manager_component.tscn" id="2_2q7fx"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Script" path="res://scripts/templates/weapon.gd" id="2_ym3mk"]
[ext_resource type="PackedScene" uid="uid://c1kn42efg8dfy" path="res://scenes/components/player_weapons/weapon_base_component.tscn" id="3_0itjg"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://resources/actors/player/weapons/blaster_repeater.tres" id="5_f8ohn"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/actors/player/movement/walking.ogg" id="8_0iptv"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="8_ffnhu"]
[ext_resource type="PackedScene" uid="uid://i44sew7s2rc3" path="res://scenes/components/hit_component.tscn" id="9_nnpch"]
[ext_resource type="AudioStream" uid="uid://xnxidwkp46un" path="res://sounds/actors/player/movement/land.ogg" id="11_m34tt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("footsteps", "jump_or_land", "misc_sound", "health_component", "weapon_manager") groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 2
collision_mask = 53
script = ExtResource("1_ffboj")
footsteps = NodePath("FootSteps")
jump_or_land = NodePath("Jump&Land")
misc_sound = NodePath("Misc")
health_component = NodePath("HealthComponent")
weapon_manager = NodePath("Neck/Head/Camera/SubViewportContainer/SubViewport/CameraItem/WeaponManagerComponent")
MAX_STEP_UP = 1.0

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Camera" type="Camera3D" parent="Neck/Head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Neck/Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Neck/Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Neck/Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
current = true
fov = 40.0

[node name="WeaponManagerComponent" parent="Neck/Head/Camera/SubViewportContainer/SubViewport/CameraItem" node_paths=PackedStringArray("player", "weapon_component", "primary_raycast", "secondary_raycast", "projectile_raycast") instance=ExtResource("2_2q7fx")]
player = NodePath("../../../../../../..")
weapon_component = NodePath("WeaponBaseComponent")
primary_raycast = NodePath("../../../../Primary_Attack_Ray")
secondary_raycast = NodePath("../../../../Secondary_Attack_Ray")
projectile_raycast = NodePath("../../../../Projectile_Attack_Ray")
weapons = Array[ExtResource("2_ym3mk")]([ExtResource("5_f8ohn")])

[node name="WeaponBaseComponent" parent="Neck/Head/Camera/SubViewportContainer/SubViewport/CameraItem/WeaponManagerComponent" node_paths=PackedStringArray("weapon_manager", "blaster_cooldown", "muzzle") instance=ExtResource("3_0itjg")]
weapon_manager = NodePath("..")
blaster_cooldown = NodePath("../../../../../../../../Cooldown")
muzzle = NodePath("../../Muzzle")

[node name="Muzzle" type="AnimatedSprite3D" parent="Neck/Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="Primary_Attack_Ray" type="RayCast3D" parent="Neck/Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 5
collide_with_areas = true

[node name="Projectile_Attack_Ray" type="RayCast3D" parent="Neck/Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.206987, -0.212868, 0)
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 5
collide_with_areas = true

[node name="Secondary_Attack_Ray" type="RayCast3D" parent="Neck/Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 5
collide_with_areas = true

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0iptv")
volume_db = -5.0
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_ffnhu")

[node name="HitComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_nnpch")]
collision_layer = 2
collision_mask = 16
health_component = NodePath("../HealthComponent")

[node name="HitCollider" type="CollisionShape3D" parent="HitComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="FootSteps" type="AudioStreamPlayer3D" parent="."]

[node name="Jump&Land" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_m34tt")

[node name="Misc" type="AudioStreamPlayer3D" parent="."]

[connection signal="pickup_detected" from="." to="." method="_on_pickup_detected"]
